app/globals.css
@import "tailwindcss";
 
:root {
  --background: #ffffff;
  --foreground: #171717;

  --bg-primary: #F1ECE4;
  --bg-secondary: #E8E2D8;

  --color-primary: #7A6A55;
  --color-secondary: #C4A484;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);

  --color-primary: var(--bg-primary);
  --color-secondary: var(--color-secondary);

  --bg-primary: var(--bg-primary);
  --bg-secondary: var(--bg-secondary);
}

 

